# LibOVR

./: .gitignore  .ninja_deps  .ninja_log  CMakeLists.txt  build.ninja  readme.txt  rules.ninja
Firmware/: readme.txt
Include/: OVR_CAPI_Audio.h
Include/Extras/: OVR_Math.h
LibOVR/Include/: OVR_CAPI.h  OVR_CAPI_Audio.h  OVR_CAPI_D3D.h  OVR_CAPI_GL.h  OVR_CAPI_Keys.h  OVR_ErrorCode.h  OVR_Version.h
LibOVR/Include/Extras/: OVR_CAPI_Util.h  OVR_Math.h  OVR_StereoProjection.h
LibOVR/Src/: OVR_CAPIShim.c  OVR_CAPI_Util.cpp  OVR_StereoProjection.cpp
LibOVRKernel/Src/GL/: CAPI_GLE.cpp  CAPI_GLE.h  CAPI_GLE_GL.h
LibOVRKernel/Src/Kernel/: OVR_Alg.cpp  OVR_Alg.h  OVR_Allocator.cpp  OVR_Allocator.h  OVR_Array.h  OVR_Atomic.cpp  OVR_Atomic.h  OVR_CRC32.cpp  OVR_CRC32.h  OVR_Callbacks.cpp  OVR_Callbacks.h  OVR_CallbacksInternal.h  OVR_Color.h  OVR_Compiler.h  OVR_ContainerAllocator.h  OVR_DebugHelp.cpp  OVR_DebugHelp.h  OVR_Delegates.h  OVR_Deque.h  OVR_File.cpp  OVR_File.h  OVR_FileFILE.cpp  OVR_Hash.h  OVR_JSON.cpp  OVR_JSON.h  OVR_List.h  OVR_Lockless.cpp  OVR_Lockless.h  OVR_Log.cpp  OVR_Log.h  OVR_Nullptr.h  OVR_Rand.cpp  OVR_Rand.h  OVR_RefCount.cpp  OVR_RefCount.h  OVR_SharedMemory.cpp  OVR_SharedMemory.h  OVR_Std.cpp  OVR_Std.h  OVR_String.cpp  (+21 more)
LibOVRKernel/Src/Tracing/: LibOVREvents.h  Tracing.h
LibOVRKernel/Src/Util/: Util_D3D11_Blitter.cpp  Util_D3D11_Blitter.h  Util_Direct3D.cpp  Util_Direct3D.h  Util_GL_Blitter.cpp  Util_GL_Blitter.h  Util_GetSystemSpecs.cpp  Util_ImageWindow.cpp  Util_ImageWindow.h  Util_LongPollThread.cpp  Util_LongPollThread.h  Util_SystemGUI.cpp  Util_SystemGUI.h  Util_SystemInfo.cpp  Util_SystemInfo.h  Util_Watchdog.cpp  Util_Watchdog.h
Logging/include/: Logging_Library.h  Logging_OutputPlugins.h  Logging_Tools.h
Logging/src/: Logging_Library.cpp  Logging_OutputPlugins.cpp
Logging/src/internal/: Logging_Tools.cpp
Samples/CommonSrc/Platform/: Gamepad.h  Platform.cpp  Platform.h  Win32_Gamepad.cpp  Win32_Gamepad.h  Win32_Platform.cpp  Win32_Platform.h
Samples/CommonSrc/Render/: Render_D3D1X_Device.cpp  Render_D3D1X_Device.h  Render_Device.cpp  Render_Device.h  Render_GL_Device.cpp  Render_GL_Device.h  Render_GL_Win32_Device.cpp  Render_GL_Win32_Device.h  Render_LoadTextureDDS.cpp  Render_XmlSceneLoader.cpp
Samples/CommonSrc/Util/: OptionMenu.cpp  OptionMenu.h  RenderProfiler.h
Samples/OculusRoomTiny/: OSX_OculusRoomTiny2.h  RenderTiny_D3D11_Device.cpp  RenderTiny_D3D11_Device.h  Win32_DistortionMesh.cpp  Win32_OculusRoomTiny.cpp  Win32_OculusRoomTiny_Util.cpp
Samples/OculusWorldDemo/: OculusWorldDemo.cpp  OculusWorldDemo.h  OculusWorldDemo_Scene.cpp  Player.cpp  Player.h
Shaders/: Blt_ps.h  Blt_vs.h
Src/: OVR_CAPIShim.c  OVR_CAPI_GL.h  OVR_Profile.cpp  OVR_SensorFusion.cpp  OVR_SensorImpl.cpp  OVR_Win32_HIDDevice.cpp  OVR_Win32_HMDDevice.cpp
Src/CAPI/: CAPI_DistortionRenderer.cpp  CAPI_HSWDisplay.cpp
Src/CAPI/D3D1X/: CAPI_D3D1X_DistortionRenderer.h  CAPI_D3D1X_Util.h
Src/CAPI/GL/: CAPI_GL_Util.cpp  (+1 more)
Src/Displays/: OVR_Win32_Display.cpp  OVR_Win32_Display.h  OVR_Win32_Dxgi_Display.h  OVR_Win32_RenderShim.cpp  OVR_Win32_ShimFunctions.cpp
Src/GL/: CAPI_GLE.cpp
Src/Kernel/: OVR_Atomic.h  OVR_DebugHelp.cpp  OVR_Math.h  OVR_Nullptr.h  OVR_SharedMemory.cpp  OVR_System.cpp  OVR_ThreadsWinAPI.cpp  OVR_Timer.cpp  OVR_Types.h  OVR_Win32_IncludeWindows.h
Src/Net/: OVR_BitStream.cpp  OVR_BitStream.h  OVR_Socket.h  OVR_Win32_Socket.cpp  OVR_Win32_Socket.h
Src/Tracing/: LibOVREvents.h  Tracing.h
Src/Tracking/: Tracking_SensorState.h
Src/Util/: Util_D3D11_Blitter.cpp  Util_Direct3D.h  Util_GL_Blitter.h  Util_ImageWindow.cpp  Util_ImageWindow.h  Util_SystemInfo.cpp
